# organize

./: .gitignore  Cargo.toml
csv_transform/: Cargo.toml  README.md  testin.csv  testout.csv
csv_transform/src/: main.rs
csv_transform/test_csvs/: testin2.csv  testout.csv
data/: todos.db
migrations/: 20230114213302_add_todos.sql
src/: main.rs  todo.rs
