[package]
name = "organize"
version = "0.1.0"
edition = "2021"

[lib]
name = "organize"
path = "src/todo.rs"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0"
async_once = "0.2"
dotenvy = "0.15"
lazy_static = "1.4"
sqlx = { version = "0.6", features = [ "runtime-tokio-native-tls" , "sqlite" ] }
tokio = { version = "1", features = ["full"] }
