[package]
name = "csv_transform"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.68"
clap = { version = "4.1.1", features = ["derive"] }
csv = "1.1.6"
sqlx = { version = "0.6", features = [ "runtime-tokio-native-tls" , "sqlite", "offline" ] }
tokio = { version = "1.24.1", features = ["rt", "macros"] }
